--- a/index.html
+++ b/index.html
@@ -58,25 +58,25 @@
         <div id="carouselExampleSlidesOnly" class="carousel slide carousel_bg" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="./images/carrusel_1.jpg" class="d-block w-100 carousel_mine" alt="...">
+                <img src="./images/carrusel_1.jpg" class="d-block w-100 carousel_mine" alt="A beautifully crafted handmade ceramic house, showcasing intricate details and delicate craftsmanship. The house features a charming design with a sloped roof, small windows, and a welcoming front door. The ceramic surface is adorned with hand-painted patterns and textures, adding a touch of whimsy and personality to the piece. The warm earthy tones and smooth finish give the house a cozy and inviting feel, making it a delightful addition to any home decor collection.">
               </div>
               <div class="carousel-item">
-                <img src="./images/carrusel_2.jpg" class="d-block w-100 carousel_mine" alt="...">
+                <img src="./images/carrusel_2.jpg" class="d-block w-100 carousel_mine" alt="A playful assortment of handmade wood pieces, bringing joy and whimsy to any space. The image features a charming monkey face sculpture, carved with intricate details and a mischievous expression. Next to it is a turtle-shaped cutting board, skillfully crafted with smooth edges and a unique patterned surface. The wood grains shine through, adding warmth and natural beauty to both pieces. These delightful creations combine imagination and craftsmanship, inviting smiles and adding a touch of fun to any home decor or kitchen setting.">
               </div>
               <div class="carousel-item">
-                <img src="./images/carrusel_3.jpg" class="d-block w-100 carousel_mine" alt="...">
+                <img src="./images/carrusel_3.jpg" class="d-block w-100 carousel_mine" alt="A photo capturing a memorable moment at the 2022 Bad Bunny concert in Peru. The image shows the excited concert-goer, wearing a vibrant outfit, enjoying the electrifying atmosphere. Surrounded by a sea of cheering fans, the individual is captured in mid-dance, radiating enthusiasm and joy. The stage is illuminated with dynamic lights, showcasing Bad Bunny's energetic performance. This image captures the thrill and excitement of the concert experience, creating a lasting memory of the unforgettable night spent immersed in music and celebration.">
               </div>
               <div class="carousel-item">
-                <img src="./images/carrusel_4.jpg" class="d-block w-100 carousel_mine" alt="...">
+                <img src="./images/carrusel_4.jpg" class="d-block w-100 carousel_mine" alt="A charming handmade ceramic candle holder in the shape of a house. The textured surface of the ceramic is adorned with hand-painted patterns, adding a touch of whimsy and personality to the piece. Inside, a small opening is designed to hold a candle, creating a cozy and inviting ambiance when lit. The warm tones and delicate craftsmanship of this ceramic candle holder make it a delightful addition to any home decor, perfect for creating a warm and tranquil atmosphere.">
               </div>
             </div>
           </div>
         
         <div class="img_container">
-            <img class="img_carrusel animacion" src="./images/carrusel_1.jpg" alt="" height="500px">
-            <img class="img_carrusel animacion" src="./images/carrusel_2.jpg" alt="" height="500px">
-            <img class="img_carrusel animacion" src="./images/carrusel_3.jpg" alt="" height="500px">
-            <img class="img_carrusel animacion" src="./images/carrusel_4.jpg" alt="" height="500px">
+            <img class="img_carrusel animacion" src="./images/carrusel_1.jpg" alt="A beautifully crafted handmade ceramic house, showcasing intricate details and delicate craftsmanship. The house features a charming design with a sloped roof, small windows, and a welcoming front door. The ceramic surface is adorned with hand-painted patterns and textures, adding a touch of whimsy and personality to the piece. The warm earthy tones and smooth finish give the house a cozy and inviting feel, making it a delightful addition to any home decor collection." height="500px">
+            <img class="img_carrusel animacion" src="./images/carrusel_2.jpg" alt="A playful assortment of handmade wood pieces, bringing joy and whimsy to any space. The image features a charming monkey face sculpture, carved with intricate details and a mischievous expression. Next to it is a turtle-shaped cutting board, skillfully crafted with smooth edges and a unique patterned surface. The wood grains shine through, adding warmth and natural beauty to both pieces. These delightful creations combine imagination and craftsmanship, inviting smiles and adding a touch of fun to any home decor or kitchen setting." height="500px">
+            <img class="img_carrusel animacion" src="./images/carrusel_3.jpg" alt="A photo capturing a memorable moment at the 2022 Bad Bunny concert in Peru. The image shows the excited concert-goer, wearing a vibrant outfit, enjoying the electrifying atmosphere. Surrounded by a sea of cheering fans, the individual is captured in mid-dance, radiating enthusiasm and joy. The stage is illuminated with dynamic lights, showcasing Bad Bunny's energetic performance. This image captures the thrill and excitement of the concert experience, creating a lasting memory of the unforgettable night spent immersed in music and celebration." height="500px">
+            <img class="img_carrusel animacion" src="./images/carrusel_4.jpg" alt="A charming handmade ceramic candle holder in the shape of a house. The textured surface of the ceramic is adorned with hand-painted patterns, adding a touch of whimsy and personality to the piece. Inside, a small opening is designed to hold a candle, creating a cozy and inviting ambiance when lit. The warm tones and delicate craftsmanship of this ceramic candle holder make it a delightful addition to any home decor, perfect for creating a warm and tranquil atmosphere." height="500px">
         </div>
     </main>
 
@@ -85,15 +85,15 @@
             <ul>
                 <li>Art</li>
                 <li>
-                    <img src="./images/estrella.svg" alt="" width="10px">
+                    <img src="./images/estrella.svg" alt="A black decoration star depicted as an SVG vector graphic. The star is intricately designed with elegant curves and points, forming a visually captivating shape. The black color creates a bold and striking contrast against the background. This decorative star SVG vector adds a touch of sophistication and charm to various design projects, making it a versatile element for enhancing visual compositions and creating an eye-catching aesthetic." width="10px">
                 </li>
                 <li>Design</li>
                 <li>
-                    <img src="./images/estrella.svg" alt="" width="10px">
+                    <img src="./images/estrella.svg" alt="A black decoration star depicted as an SVG vector graphic. The star is intricately designed with elegant curves and points, forming a visually captivating shape. The black color creates a bold and striking contrast against the background. This decorative star SVG vector adds a touch of sophistication and charm to various design projects, making it a versatile element for enhancing visual compositions and creating an eye-catching aesthetic." width="10px">
                 </li>
                 <li>Pottery</li>
                 <li>
-                    <img src="./images/estrella.svg" alt="" width="10px">
+                    <img src="./images/estrella.svg" alt="A black decoration star depicted as an SVG vector graphic. The star is intricately designed with elegant curves and points, forming a visually captivating shape. The black color creates a bold and striking contrast against the background. This decorative star SVG vector adds a touch of sophistication and charm to various design projects, making it a versatile element for enhancing visual compositions and creating an eye-catching aesthetic." width="10px">
                 </li>
                 <li>Web Programming</li>
              </ul>
@@ -103,20 +103,21 @@
     <section class="grid_a">
         <div class="text_box_a">
             <div class="subtitle_a">
-                <h3>Hello!</h3>
-                <h2>Thais here :)</h2>
+                <h2>Hello!</h2>
+                <h3>Thais here :)</h3>
             </div>
             <p>Hi! My name is Thais and I'm a graphic designer, content creator, artist, ceramist and web developer.
                 My favorite hobby is learning new hobbies and I love challenging myself to always have a new one.</p>
                 <br>
-            <p>Hi! My name is Thais and I'm a graphic designer, content creator, artist, ceramist and web developer.
-                My favorite hobby is learning new hobbies and I love challenging myself to always have a new one.</p>
+            <p><strong><i>CREATIVITY AND HARD WORK GO GREAT TOGETHER</i></strong></p>
+            <br>
+            <p>Come with me to see my journey in this world.</p>
                 <div class="button_div">
                     <a class="btn_mine" href="./pages/aboutme.html">Let's Go</a>
                 </div>
         </div>
         <div class="container_img">
-            <img class="img" src="./images/hello.jpg" alt="" width="100%">
+            <img class="img" src="./images/hello.jpg" alt="In Cusco, Peru, sitting on the edge of a bridge. The image captures the user enjoying the breathtaking view of the cityscape and surrounding mountains. The user is comfortably seated, legs dangling over the bridge, immersed in the serene atmosphere. The bridge features intricate stonework and arches, reflecting the architectural charm of Cusco. With a backdrop of colorful buildings and lush greenery, the scene showcases the unique blend of nature and history that defines this enchanting Peruvian city." width="100%">
         </div>
     </section>
 
@@ -124,8 +125,8 @@
         <div class="grid_b">
             <div class="text_box_a">
                 <div class="subtitle_a">
-                    <h2>My very chaotic</h2>
-                    <h3>Portfolio</h3>
+                    <h3>My very chaotic</h3>
+                    <h2>Portfolio</h2>
                 </div>
                 <p>Since I seem to never get bored, my work tends to be very diverse.</p>
                 <br>
@@ -135,7 +136,7 @@
                 </div>
             </div>
             <div class="container_img">
-                <img class="img" src="./images/casita.jpg" alt="" width="100%">
+                <img class="img" src="./images/casita.jpg" alt="An image of a meticulously crafted small handmade ceramic house. This ceramic house is a marvel of intricate details and precision. The miniature structure features a sloped roof, delicate windows, and a charming front door. The surface of the ceramic is adorned with carefully painted patterns and textures, enhancing its visual appeal. The artist's skill and attention to detail are evident in every aspect of this piece, from the precision of the architecture to the intricate ornamentation. The small size of the house adds to its delicate beauty, making it a remarkable work of art and a delightful addition to any collection of handmade ceramics." width="100%">
             </div>
         </div>
     </section>
@@ -145,19 +146,19 @@
             <ul>
                 <li>Create</li>
                 <li>
-                    <img src="./images/estrella.svg" alt="" width="10px">
+                    <img src="./images/estrella.svg" alt="A black decoration star depicted as an SVG vector graphic. The star is intricately designed with elegant curves and points, forming a visually captivating shape. The black color creates a bold and striking contrast against the background. This decorative star SVG vector adds a touch of sophistication and charm to various design projects, making it a versatile element for enhancing visual compositions and creating an eye-catching aesthetic." width="10px">
                 </li>
                 <li>Create</li>
                 <li>
-                    <img src="./images/estrella.svg" alt="" width="10px">
+                    <img src="./images/estrella.svg" alt="A black decoration star depicted as an SVG vector graphic. The star is intricately designed with elegant curves and points, forming a visually captivating shape. The black color creates a bold and striking contrast against the background. This decorative star SVG vector adds a touch of sophistication and charm to various design projects, making it a versatile element for enhancing visual compositions and creating an eye-catching aesthetic." width="10px">
                 </li>
                 <li>Create</li>
                 <li>
-                    <img src="./images/estrella.svg" alt="" width="10px">
+                    <img src="./images/estrella.svg" alt="A black decoration star depicted as an SVG vector graphic. The star is intricately designed with elegant curves and points, forming a visually captivating shape. The black color creates a bold and striking contrast against the background. This decorative star SVG vector adds a touch of sophistication and charm to various design projects, making it a versatile element for enhancing visual compositions and creating an eye-catching aesthetic." width="10px">
                 </li>
                 <li>Create</li>
                 <li>
-                    <img src="./images/estrella.svg" alt="" width="10px">
+                    <img src="./images/estrella.svg" alt="A black decoration star depicted as an SVG vector graphic. The star is intricately designed with elegant curves and points, forming a visually captivating shape. The black color creates a bold and striking contrast against the background. This decorative star SVG vector adds a touch of sophistication and charm to various design projects, making it a versatile element for enhancing visual compositions and creating an eye-catching aesthetic." width="10px">
                 </li>
             </ul>
         </marquee>
@@ -165,14 +166,14 @@
 
     <section>
         <div class="subtitle_b">
-            <h3>My Services</h3>
+            <h2>My Services</h2>
         </div>
         <div class="grid_c">
                 <div class="container_img_b">
-                    <img class="img_home_services" src="./images/branding.jpg" alt="" width="100%">
+                    <img class="img_home_services" src="./images/branding.jpg" alt="An image illustrating the process of branding services, showcasing the key steps involved in developing a comprehensive brand strategy. The image features a series of interconnected stages, beginning with research and analysis, followed by target audience identification, brand positioning, message development, visual identity creation, marketing collateral design, and brand launch. Each step is represented by relevant icons and elements, highlighting the sequential progression of the branding process. This visual representation emphasizes the strategic planning, creativity, and coordination required to deliver successful branding services, resulting in a strong and memorable brand presence for businesses." width="100%">
                 </div>
                 <div class="container_img_b">
-                    <img class="img_home_services" src="./images/socialmediadesign.jpg" alt="" width="100%">
+                    <img class="img_home_services" src="./images/socialmediadesign.jpg" alt="An image depicting the process of social media design services, illustrating the essential steps involved in creating engaging and visually appealing social media content. The image showcases a series of interconnected stages, starting with content strategy and planning, followed by graphic design, image editing, copywriting, and scheduling. Each step is represented by relevant icons and elements, demonstrating the workflow and coordination required for effective social media design services. This visual representation emphasizes the creativity, attention to detail, and strategic thinking involved in crafting captivating social media visuals and messaging that help businesses connect with their audience and achieve their marketing goals." width="100%">
                 </div>
                 <div class="div_half">
                     <h4 class="services_subtitle">Social Media Design</h4>
@@ -204,16 +205,16 @@
         <div>
             <ul class="display_socialmedia">
                 <li>
-                    <a href="https://www.instagram.com/thaiiis.png/"><img class="socialmedia_icons" src="./images/instagram.png" alt=""></a>
+                    <a href="https://www.instagram.com/thaiiis.png/"><img class="socialmedia_icons" src="./images/instagram.png" alt="An image of the Instagram icon, representing the popular social media platform. The icon features a simplified camera design, resembling a square with rounded corners. Inside the square, a gradient background fades from vibrant shades of purple, pink, and orange to a pale yellow in the center. At the top right corner of the square, a small white outline of a camera is depicted. This Instagram icon is a recognizable symbol that represents the platform's focus on sharing photos and videos with friends and followers."></a>
                 </li>
                 <li>
-                    <a href="https://www.behance.net/thaisraez"><img class="socialmedia_icons" src="./images/behance.png" alt=""></a>
+                    <a href="https://www.behance.net/thaisraez"><img class="socialmedia_icons" src="./images/behance.png" alt="An image of a Behance icon, representing the Behance platform. The icon features the iconic Behance logo, which consists of a lowercase letter b enclosed within a square box. The logo is typically displayed in vibrant orange, symbolizing creativity and innovation. This Behance icon is a recognizable symbol that represents the platforms dedication to showcasing and promoting creative works from artists and designers worldwide."></a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/in/thais-raez-90b114212/"><img class="socialmedia_icons" src="./images/linkedin.png" alt=""></a>
+                    <a href="https://www.linkedin.com/in/thais-raez-90b114212/"><img class="socialmedia_icons" src="./images/linkedin.png" alt="An image of the LinkedIn icon along with other linked social media icons. The LinkedIn icon is displayed prominently and features the iconic in symbol in white on a blue background. Surrounding the LinkedIn icon are additional linked social media icons, such as Instagram, Twitter, and Facebook, each represented by their respective recognizable logos. This image signifies the user's presence on multiple social media platforms and highlights their connectivity and engagement across various online networks."></a>
                 </li>
                 <li>
-                    <a href="https://www.tiktok.com/@thaisraez?_t=8b99Aa9oGgP&_r=1"><img class="socialmedia_icons" src="./images/tiktok.png" alt=""></a>
+                    <a href="https://www.tiktok.com/@thaisraez?_t=8b99Aa9oGgP&_r=1"><img class="socialmedia_icons" src="./images/tiktok.png" alt="An image of the TikTok icon, representing the popular social media platform. The TikTok icon features a white music note symbol on a black background, enclosed within a red circle. The music note is stylized with a gradient effect, fading from dark gray to light gray. This TikTok icon is a recognizable symbol that represents the platform's focus on short-form videos, creative expression, and engaging content."></a>
                 </li>
             </ul>
         </div>
