--- a/pages/contact.html
+++ b/pages/contact.html
@@ -55,15 +55,15 @@
     <main class="contact_grid">
         <div>
             <div class="text_box_c">
-                <h2>Let's get in</h2>
-                <h3>Contact</h3>
+                <h3>Let's get in</h3>
+                <h2>Contact</h2>
                 <br>
-                <p>Hi! My name is Thais and I'm a graphic designer, content creator, artist, ceramist and web developer.
-                    My favorite hobby is learning new hobbies and I love challenging myself to always have a new one.</p>
+                <p>I'm always available (except weekends) to chat with you! Send in your request and 
+                    save some time for you and me.</p>
             </div>
         </div>
         <div class="bg_contact">
-            <img src="../images/casita.jpg" alt="" width="100%">
+            <img src="../images/hojas.jpg" width="100%" alt="A visually captivating image of the ground covered with orange and brown leaves, surrounded by clusters of ripe grapes. The fallen leaves create a colorful carpet, ranging from vibrant orange to rich shades of brown, evoking the beauty of autumn. Interspersed among the leaves are clusters of plump grapes, displaying a variety of colors, including deep purple and luscious green. The image captures the seasonal charm and abundance of nature, with a combination of autumnal foliage and bountiful harvest, offering a warm and inviting scene to behold.">
         </div>
         <div class="contact_form">
             <p>Nombre</p>
@@ -92,16 +92,16 @@
         <div>
             <ul class="display_socialmedia">
                 <li>
-                    <a href="https://www.instagram.com/thaiiis.png/"><img class="socialmedia_icons" src="../images/instagram.png" alt=""></a>
+                    <a href="https://www.instagram.com/thaiiis.png/"><img class="socialmedia_icons" src="../images/instagram.png" alt="An image of the Instagram icon, representing the popular social media platform. The icon features a simplified camera design, resembling a square with rounded corners. Inside the square, a gradient background fades from vibrant shades of purple, pink, and orange to a pale yellow in the center. At the top right corner of the square, a small white outline of a camera is depicted. This Instagram icon is a recognizable symbol that represents the platform's focus on sharing photos and videos with friends and followers."></a>
                 </li>
                 <li>
-                    <a href="https://www.behance.net/thaisraez"><img class="socialmedia_icons" src="../images/behance.png" alt=""></a>
+                    <a href="https://www.behance.net/thaisraez"><img class="socialmedia_icons" src="../images/behance.png" alt="An image of a Behance icon, representing the Behance platform. The icon features the iconic Behance logo, which consists of a lowercase letter b enclosed within a square box. The logo is typically displayed in vibrant orange, symbolizing creativity and innovation. This Behance icon is a recognizable symbol that represents the platforms dedication to showcasing and promoting creative works from artists and designers worldwide."></a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/in/thais-raez-90b114212/"><img class="socialmedia_icons" src="../images/linkedin.png" alt=""></a>
+                    <a href="https://www.linkedin.com/in/thais-raez-90b114212/"><img class="socialmedia_icons" src="../images/linkedin.png" alt="An image of the LinkedIn icon along with other linked social media icons. The LinkedIn icon is displayed prominently and features the iconic in symbol in white on a blue background. Surrounding the LinkedIn icon are additional linked social media icons, such as Instagram, Twitter, and Facebook, each represented by their respective recognizable logos. This image signifies the user's presence on multiple social media platforms and highlights their connectivity and engagement across various online networks."></a>
                 </li>
                 <li>
-                    <a href="https://www.tiktok.com/@thaisraez?_t=8b99Aa9oGgP&_r=1"><img class="socialmedia_icons" src="../images/tiktok.png" alt=""></a>
+                    <a href="https://www.tiktok.com/@thaisraez?_t=8b99Aa9oGgP&_r=1"><img class="socialmedia_icons" src="../images/tiktok.png" alt="An image of the TikTok icon, representing the popular social media platform. The TikTok icon features a white music note symbol on a black background, enclosed within a red circle. The music note is stylized with a gradient effect, fading from dark gray to light gray. This TikTok icon is a recognizable symbol that represents the platform's focus on short-form videos, creative expression, and engaging content."></a>
                 </li>
             </ul>
         </div>
