--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -55,45 +55,45 @@
     <div class="grid_portfolio">
         <main class="main_portfolio">
             <div class="text_box_a">
-                    <h2>Check out my</h2>
-                    <h3>Portfolio</h3>
+                    <h3>Check out my</h3>
+                    <h2>Portfolio</h2>
                     <br>
                     <p>Great work. Great artist.</p>
             </div>
         </main>
 
         <section class="sec_a_portfolio">
-            <img class="img_portfolio" src="../images/mockup_cartuja.jpg" alt="" width="100%">
+            <img class="img_portfolio" src="../images/mockup_cartuja.jpg" alt="An image showcasing an egg box design with a focus on functionality and aesthetics. The egg box is made of durable material and features a practical layout to securely hold and protect eggs. The design incorporates individual compartments for each egg, ensuring they stay in place during transportation. The box is visually appealing, with a sleek and modern appearance, incorporating smooth edges and a clean finish. The thoughtful design of this egg box combines both functionality and visual appeal, making it an ideal choice for storing and transporting eggs while adding a touch of elegance to the kitchen or grocery store shelves." width="100%">
         </section>
 
         <section class="sec_b_portfolio">
             <div class="div_portfolio">
-                <img class="img_portfolio_b" src="../images/fe.jpg" alt="" width="100%">
+                <img class="img_portfolio_b" src="../images/fe.jpg" alt="An image showcasing a school book design with a focus on usability and visual appeal. The book features a sturdy cover, designed to withstand frequent use. The title and subject are prominently displayed, allowing easy identification. The layout inside consists of organized chapters, clear headings, and legible text, facilitating effective learning and comprehension. The book design incorporates relevant images, diagrams, and illustrations that enhance understanding and engagement. The color scheme is harmonious, aiding in visual navigation and creating a pleasing aesthetic. This school book design combines practicality and aesthetics, providing an inviting and effective resource for students and educators alike." width="100%">
             </div>
         </section>
 
         <section class="sec_c_portfolio">
-                <img class="img_portfolio" src="../images/lvm.jpg" alt="" width="100%">
+                <img class="img_portfolio" src="../images/lvm.jpg" alt="An image showcasing a social media post design with attention-grabbing visuals and engaging content. The design features a well-composed layout with a captivating image or graphic at the forefront. The text content is concise, informative, and relevant to the post's purpose. The color scheme and typography are carefully chosen to enhance readability and evoke the desired mood or brand identity. The design may include branding elements, such as logos or icons, to reinforce brand recognition. Overall, this social media post design combines visual appeal, compelling content, and effective communication to capture the attention and interest of the target audience." width="100%">
         </section>
 
         <section class="sec_d_portfolio">
             <div class="div_portfolio">
-                <img class="img_portfolio_b" src="../images/tikuna.jpg" width="100%">
+                <img class="img_portfolio_b" src="../images/tikuna.jpg" width="100%" alt="An image showcasing a chocolate packaging design that exudes elegance and indulgence. The packaging features a rich and sophisticated color palette, complemented by intricate patterns or textures. The brand logo is prominently displayed, along with mouthwatering visuals of the chocolate. The packaging is designed to protect and preserve the chocolates, with a secure and visually appealing presentation. The typography is tastefully chosen, providing essential product information and conveying a sense of luxury. This chocolate packaging design represents a perfect blend of aesthetics, functionality, and enticing appeal, making it an ideal choice for a delightful chocolate experience.">
             </div>
         </section>
 
         <section class="sec_e_portfolio">
-                <img class="img_portfolio" src="../images/primavera.jpg" alt="" width="100%">
+                <img class="img_portfolio" src="../images/primavera.jpg" alt="A social media story featuring a new pottery cup and flowers design. The story displays a beautifully crafted pottery cup, showcasing its unique shape, texture, and intricate details. The cup is adorned with a captivating floral design, incorporating vibrant and delicately painted flowers. It is accompanied by a complementary arrangement of fresh flowers, adding a touch of natural beauty and enhancing the overall visual appeal. This social media story highlights the artistic craftsmanship of the pottery cup and celebrates the harmonious combination of pottery artistry and floral aesthetics, making it an enticing addition to any home decor or collection." width="100%">
         </section>
 
         <section class="sec_f_portfolio">
             <div class="div_portfolio">
-                <img class="img_portfolio_b" src="../images/ninfa.jpg" width="100%">
+                <img class="img_portfolio_b" src="../images/ninfa.jpg" width="100%" alt="A banner design representing a cool tampon brand. The banner features a modern and edgy aesthetic, with bold typography and vibrant colors. The brand logo is prominently displayed, reflecting the brand's identity and style. The design incorporates creative elements that break taboos and challenge traditional perceptions, aiming to empower and resonate with the target audience. This banner design aims to present the tampon brand as trendy, inclusive, and forward-thinking, offering a unique and exciting alternative in the feminine care market.">
             </div>
         </section>
 
         <section class="sec_g_portfolio">
-                <img class="img_portfolio" src="../images/kantu.jpg" alt="" width="100%">
+                <img class="img_portfolio" src="../images/kantu.jpg" alt="An image showcasing the packaging design for alpaca clothing. The packaging features a visually appealing design, reflecting the natural and cozy characteristics of alpaca fibers. The background may incorporate earthy tones or soft pastels, evoking a sense of warmth and comfort. The packaging prominently displays the brand logo and name, accompanied by images of alpacas or alpaca-inspired patterns. The design elements convey a sense of luxury and craftsmanship, emphasizing the high-quality and sustainable nature of alpaca clothing. This packaging design captures the essence of alpaca clothing and presents it in an attractive and enticing way, promising a delightful and cozy fashion experience." width="100%">
         </section>
 
         <section class="sec_h_portfolio">
@@ -102,7 +102,7 @@
                 <h5>see</h5>
                 <h5>more?</h5>
             </div>
-                <a href="https://www.behance.net/thaisraez"> <img class="behance" src="../images/behance.png" alt=""></a>
+                <a href="https://www.behance.net/thaisraez"> <img class="behance" src="../images/behance.png" alt="write an alt text for a behance icon design"></a>
         </section>
     </div>
 
@@ -111,15 +111,15 @@
             <ul>
                 <li>Something you like?</li>
                 <li>
-                    <img src="../images/estrella.svg" alt="" width="10px">
+                    <img src="../images/estrella.svg" alt="A black decoration star depicted as an SVG vector graphic. The star is intricately designed with elegant curves and points, forming a visually captivating shape. The black color creates a bold and striking contrast against the background. This decorative star SVG vector adds a touch of sophistication and charm to various design projects, making it a versatile element for enhancing visual compositions and creating an eye-catching aesthetic." width="10px">
                 </li>
                 <li>Something you like?</li>
                 <li>
-                    <img src="../images/estrella.svg" alt="" width="10px">
+                    <img src="../images/estrella.svg" alt="A black decoration star depicted as an SVG vector graphic. The star is intricately designed with elegant curves and points, forming a visually captivating shape. The black color creates a bold and striking contrast against the background. This decorative star SVG vector adds a touch of sophistication and charm to various design projects, making it a versatile element for enhancing visual compositions and creating an eye-catching aesthetic." width="10px">
                 </li>
                 <li>Something you like?</li>
                 <li>
-                    <img src="../images/estrella.svg" alt="" width="10px">
+                    <img src="../images/estrella.svg" alt="A black decoration star depicted as an SVG vector graphic. The star is intricately designed with elegant curves and points, forming a visually captivating shape. The black color creates a bold and striking contrast against the background. This decorative star SVG vector adds a touch of sophistication and charm to various design projects, making it a versatile element for enhancing visual compositions and creating an eye-catching aesthetic." width="10px">
                 </li>
                 <li>Something you like?</li>
              </ul>
@@ -140,16 +140,16 @@
         <div>
             <ul class="display_socialmedia">
                 <li>
-                    <a href="https://www.instagram.com/thaiiis.png/"><img class="socialmedia_icons" src="../images/instagram.png" alt=""></a>
+                    <a href="https://www.instagram.com/thaiiis.png/"><img class="socialmedia_icons" src="../images/instagram.png" alt="An image of the Instagram icon, representing the popular social media platform. The icon features a simplified camera design, resembling a square with rounded corners. Inside the square, a gradient background fades from vibrant shades of purple, pink, and orange to a pale yellow in the center. At the top right corner of the square, a small white outline of a camera is depicted. This Instagram icon is a recognizable symbol that represents the platform's focus on sharing photos and videos with friends and followers."></a>
                 </li>
                 <li>
-                    <a href="https://www.behance.net/thaisraez"><img class="socialmedia_icons" src="../images/behance.png" alt=""></a>
+                    <a href="https://www.behance.net/thaisraez"><img class="socialmedia_icons" src="../images/behance.png" alt="An image of a Behance icon, representing the Behance platform. The icon features the iconic Behance logo, which consists of a lowercase letter b enclosed within a square box. The logo is typically displayed in vibrant orange, symbolizing creativity and innovation. This Behance icon is a recognizable symbol that represents the platforms dedication to showcasing and promoting creative works from artists and designers worldwide."></a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/in/thais-raez-90b114212/"><img class="socialmedia_icons" src="../images/linkedin.png" alt=""></a>
+                    <a href="https://www.linkedin.com/in/thais-raez-90b114212/"><img class="socialmedia_icons" src="../images/linkedin.png" alt="An image of the LinkedIn icon along with other linked social media icons. The LinkedIn icon is displayed prominently and features the iconic in symbol in white on a blue background. Surrounding the LinkedIn icon are additional linked social media icons, such as Instagram, Twitter, and Facebook, each represented by their respective recognizable logos. This image signifies the user's presence on multiple social media platforms and highlights their connectivity and engagement across various online networks."></a>
                 </li>
                 <li>
-                    <a href="https://www.tiktok.com/@thaisraez?_t=8b99Aa9oGgP&_r=1"><img class="socialmedia_icons" src="../images/tiktok.png" alt=""></a>
+                    <a href="https://www.tiktok.com/@thaisraez?_t=8b99Aa9oGgP&_r=1"><img class="socialmedia_icons" src="../images/tiktok.png" alt="An image of the TikTok icon, representing the popular social media platform. The TikTok icon features a white music note symbol on a black background, enclosed within a red circle. The music note is stylized with a gradient effect, fading from dark gray to light gray. This TikTok icon is a recognizable symbol that represents the platform's focus on short-form videos, creative expression, and engaging content."></a>
                 </li>
             </ul>
         </div>
