--- a/pages/services.html
+++ b/pages/services.html
@@ -55,13 +55,13 @@
     <main>
         <section class="grid_services">
             <div class="text_box_c">
-                    <h2>My</h2>
-                    <h3>Services</h3>
+                    <h3>My</h3>
+                    <h2>Services</h2>
                     <br>
                     <p>What can i do for you?</p>
             </div>
             <div class="text_services">
-                <h5>Want to see more?</h5>
+                <h5>Let's work together</h5>
                 <br>
                 <p>You don't need to choose right now. If you're unsure about how you want to work with me.</p>
                 <br>
@@ -69,7 +69,7 @@
                 <br>
                 <p>We can always have a consultation meeting to learn about you're project.</p>
                 <div class="button_div">
-                    <a class="btn_mine" href="../pages/services.html">Let's Chat</a>
+                    <a class="btn_mine" href="../pages/services.html">Let's do it!</a>
                 </div>
             </div>
             <div class="bg_services">
@@ -83,15 +83,15 @@
             <ul>
                 <li>Creative Minds</li>
                 <li>
-                    <img class="star" src="../images/estrella.svg" alt="">
+                    <img class="star" src="../images/estrella.svg" alt="A black decoration star depicted as an SVG vector graphic. The star is intricately designed with elegant curves and points, forming a visually captivating shape. The black color creates a bold and striking contrast against the background. This decorative star SVG vector adds a touch of sophistication and charm to various design projects, making it a versatile element for enhancing visual compositions and creating an eye-catching aesthetic.">
                 </li>
                 <li>Creative Minds</li>
                 <li>
-                    <img class="star" src="../images/estrella.svg" alt="">
+                    <img class="star" src="../images/estrella.svg" alt="A black decoration star depicted as an SVG vector graphic. The star is intricately designed with elegant curves and points, forming a visually captivating shape. The black color creates a bold and striking contrast against the background. This decorative star SVG vector adds a touch of sophistication and charm to various design projects, making it a versatile element for enhancing visual compositions and creating an eye-catching aesthetic.">
                 </li>
                 <li>Creative Minds</li>
                 <li>
-                    <img class="star" src="../images/estrella.svg" alt="">
+                    <img class="star" src="../images/estrella.svg" alt="A black decoration star depicted as an SVG vector graphic. The star is intricately designed with elegant curves and points, forming a visually captivating shape. The black color creates a bold and striking contrast against the background. This decorative star SVG vector adds a touch of sophistication and charm to various design projects, making it a versatile element for enhancing visual compositions and creating an eye-catching aesthetic.">
                 </li>
                 <li>Creative Minds</li>
              </ul>
@@ -99,40 +99,40 @@
     </section>
   
     <section class="sec_design">
-        <h2 class="subtitle_b">Design</h2>
+        <h3 class="subtitle_b">Design</h3>
         <div class="services_textbox">
             <h4 class="design_services_title">Branding</h4>
             <p class="design_services_text">Manage your brand identity and strategy to effectively communicate with
                 your target audience and build brand recognition and loyalty.</p>
             <div class="button_div_c">
-                <a class="design_services_button" href="../pages/services.html">Let's Chat!</a>
+                <a class="design_services_button" href="../pages/services.html">I want this!</a>
             </div>
         </div>
     </section>
 
     <section class="services_flex">
         <div class="services_items" >
-            <h2>Web</h2>
+            <h3>Web</h3>
             <br>
-            <p>You don't need to choose right now. If you're unsure about how you want to work with me.</p>
-            <p><strong>Let's chat!</strong></p>
-            <p>We can always have a consultation meeting to learn about you're project.</p>
+            <p>Build your web with me! Design, strategy and coding all in one place! Let's get together
+                and discuss your business. We can work this out!</p>
+            <p><strong>We can always have a consultation meeting to learn more about you're project.</strong></p>
         </div>
         <div class="services_items" >
-            <h2>Pottery</h2>
+            <h3>Pottery</h3>
             <br>
-            <p>You don't need to choose right now. If you're unsure about how you want to work with me.</p>
-            <p><strong>Let's chat!</strong></p>
-            <p>We can always have a consultation meeting to learn about you're project.</p>
+            <p>Always have time to handmade! Pottery loooooove around here. Personalized pieces, colors
+                 and design. Nothing is better than handmade!</p>
+            <p><strong>We can always have a consultation meeting to learn more about you're project.</strong></p>
         </div>
     </section>
 
     <section>
         <div class="img_container">
-            <img class="img_carrusel" src="../images/carrusel_1.jpg" alt="" height="500px">
-            <img class="img_carrusel" src="../images/carrusel_2.jpg" alt="" height="500px">
-            <img class="img_carrusel" src="../images/carrusel_3.jpg" alt="" height="500px">
-            <img class="img_carrusel" src="../images/carrusel_4.jpg" alt="" height="500px">
+            <img class="img_carrusel" src="../images/carrusel_1.jpg" alt="A beautifully crafted handmade ceramic house, showcasing intricate details and delicate craftsmanship. The house features a charming design with a sloped roof, small windows, and a welcoming front door. The ceramic surface is adorned with hand-painted patterns and textures, adding a touch of whimsy and personality to the piece. The warm earthy tones and smooth finish give the house a cozy and inviting feel, making it a delightful addition to any home decor collection." height="500px">
+            <img class="img_carrusel" src="../images/carrusel_2.jpg" alt="A playful assortment of handmade wood pieces, bringing joy and whimsy to any space. The image features a charming monkey face sculpture, carved with intricate details and a mischievous expression. Next to it is a turtle-shaped cutting board, skillfully crafted with smooth edges and a unique patterned surface. The wood grains shine through, adding warmth and natural beauty to both pieces. These delightful creations combine imagination and craftsmanship, inviting smiles and adding a touch of fun to any home decor or kitchen setting." height="500px">
+            <img class="img_carrusel" src="../images/carrusel_3.jpg" alt="A photo capturing a memorable moment at the 2022 Bad Bunny concert in Peru. The image shows the excited concert-goer, wearing a vibrant outfit, enjoying the electrifying atmosphere. Surrounded by a sea of cheering fans, the individual is captured in mid-dance, radiating enthusiasm and joy. The stage is illuminated with dynamic lights, showcasing Bad Bunny's energetic performance. This image captures the thrill and excitement of the concert experience, creating a lasting memory of the unforgettable night spent immersed in music and celebration." height="500px">
+            <img class="img_carrusel" src="../images/carrusel_4.jpg" alt="A charming handmade ceramic candle holder in the shape of a house. The textured surface of the ceramic is adorned with hand-painted patterns, adding a touch of whimsy and personality to the piece. Inside, a small opening is designed to hold a candle, creating a cozy and inviting ambiance when lit. The warm tones and delicate craftsmanship of this ceramic candle holder make it a delightful addition to any home decor, perfect for creating a warm and tranquil atmosphere." height="500px">
         </div>
     </section>
     <footer class="footer_grid">
@@ -150,16 +150,16 @@
         <div>
             <ul class="display_socialmedia">
                 <li>
-                    <a href="https://www.instagram.com/thaiiis.png/"><img class="socialmedia_icons" src="../images/instagram.png" alt=""></a>
+                    <a href="https://www.instagram.com/thaiiis.png/"><img class="socialmedia_icons" src="../images/instagram.png" alt="An image of the Instagram icon, representing the popular social media platform. The icon features a simplified camera design, resembling a square with rounded corners. Inside the square, a gradient background fades from vibrant shades of purple, pink, and orange to a pale yellow in the center. At the top right corner of the square, a small white outline of a camera is depicted. This Instagram icon is a recognizable symbol that represents the platform's focus on sharing photos and videos with friends and followers."></a>
                 </li>
                 <li>
-                    <a href="https://www.behance.net/thaisraez"><img class="socialmedia_icons" src="../images/behance.png" alt=""></a>
+                    <a href="https://www.behance.net/thaisraez"><img class="socialmedia_icons" src="../images/behance.png" alt="An image of a Behance icon, representing the Behance platform. The icon features the iconic Behance logo, which consists of a lowercase letter b enclosed within a square box. The logo is typically displayed in vibrant orange, symbolizing creativity and innovation. This Behance icon is a recognizable symbol that represents the platforms dedication to showcasing and promoting creative works from artists and designers worldwide."></a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/in/thais-raez-90b114212/"><img class="socialmedia_icons" src="../images/linkedin.png" alt=""></a>
+                    <a href="https://www.linkedin.com/in/thais-raez-90b114212/"><img class="socialmedia_icons" src="../images/linkedin.png" alt="An image of the LinkedIn icon along with other linked social media icons. The LinkedIn icon is displayed prominently and features the iconic in symbol in white on a blue background. Surrounding the LinkedIn icon are additional linked social media icons, such as Instagram, Twitter, and Facebook, each represented by their respective recognizable logos. This image signifies the user's presence on multiple social media platforms and highlights their connectivity and engagement across various online networks."></a>
                 </li>
                 <li>
-                    <a href="https://www.tiktok.com/@thaisraez?_t=8b99Aa9oGgP&_r=1"><img class="socialmedia_icons" src="../images/tiktok.png" alt=""></a>
+                    <a href="https://www.tiktok.com/@thaisraez?_t=8b99Aa9oGgP&_r=1"><img class="socialmedia_icons" src="../images/tiktok.png" alt="An image of the TikTok icon, representing the popular social media platform. The TikTok icon features a white music note symbol on a black background, enclosed within a red circle. The music note is stylized with a gradient effect, fading from dark gray to light gray. This TikTok icon is a recognizable symbol that represents the platform's focus on short-form videos, creative expression, and engaging content."></a>
                 </li>
             </ul>
         </div>
