--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Unlock your creative potential with our portfolio
+    of design, programming, and pottery services. Discover the perfect blend of artistry and
+    technology as we bring your ideas to life. From stunning visual designs to innovative programming
+    solutions, our team is dedicated to delivering captivating experiences. Explore our portfolio and unleash your
+    imagination today.">
+    <meta name="keywords" content="HTML, CSS, Design, Creativity, Pottery, Design Services">
     <title>My Creative World</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -108,9 +115,7 @@
             </div>
             <p>Hi! My name is Thais and I'm a graphic designer, content creator, artist, ceramist and web developer.
                 My favorite hobby is learning new hobbies and I love challenging myself to always have a new one.</p>
-                <br>
             <p><strong><i>CREATIVITY AND HARD WORK GO GREAT TOGETHER</i></strong></p>
-            <br>
             <p>Come with me to see my journey in this world.</p>
                 <div class="button_div">
                     <a class="btn_mine" href="./pages/aboutme.html">Let's Go</a>
@@ -129,7 +134,6 @@
                     <h2>Portfolio</h2>
                 </div>
                 <p>Since I seem to never get bored, my work tends to be very diverse.</p>
-                <br>
                 <p> <strong> Check it out! </strong></p>
                 <div class="button_div_c">
                     <a class="btn_mine_c" href="./pages/portfolio.html">Let's Go</a>
@@ -197,9 +201,7 @@
 
         <div class="footer_display_complete">
             <h5>Let's Get Creative Together</h5>
-            <br>
             <h5>Let's Get Creative Together</h5>
-            <br>
             <h5>Let's Get Creative Together</h5>
         </div>
         <div>
