--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Unlock your creative potential with our portfolio
+    of design, programming, and pottery services. Discover the perfect blend of artistry and
+    technology as we bring your ideas to life. From stunning visual designs to innovative programming
+    solutions, our team is dedicated to delivering captivating experiences. Explore our portfolio and unleash your
+    imagination today.">
+    <meta name="keywords" content="HTML, CSS, Design, Creativity, Pottery, Design Services">
     <title>My Creative World</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.png">
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" 
     rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" 
@@ -57,7 +64,6 @@
             <div class="text_box_c">
                 <h3>Let's get in</h3>
                 <h2>Contact</h2>
-                <br>
                 <p>I'm always available (except weekends) to chat with you! Send in your request and 
                     save some time for you and me.</p>
             </div>
@@ -65,16 +71,28 @@
         <div class="bg_contact">
             <img src="../images/hojas.jpg" width="100%" alt="A visually captivating image of the ground covered with orange and brown leaves, surrounded by clusters of ripe grapes. The fallen leaves create a colorful carpet, ranging from vibrant orange to rich shades of brown, evoking the beauty of autumn. Interspersed among the leaves are clusters of plump grapes, displaying a variety of colors, including deep purple and luscious green. The image captures the seasonal charm and abundance of nature, with a combination of autumnal foliage and bountiful harvest, offering a warm and inviting scene to behold.">
         </div>
-        <div class="contact_form">
-            <p>Nombre</p>
-            <p>Apellido</p>
-            <p>Mail</p>
-            <p>Theme</p>
-            <p>Message</p>
-            <div class="button_div">
-                <a class="btn_mine" href="">Send</a>
-            </div>
-        </div>
+
+        <form class="contact_form" action="" method="post">
+
+            <fieldset>
+                <label for="">Name</label>
+                <input id="name" type="text" name="" required>
+            </fieldset>
+
+            <fieldset>
+                <label for="">Mail</label>
+                <input id="email" type="email" name="" required>
+            </fieldset>
+
+            <fieldset>
+                <label for="">Message</label>
+                <textarea name="" id="" cols="30" rows="10"></textarea>
+            </fieldset>
+
+            <fieldset class="button_div">
+                <input type="submit" value="SEND" class="btn_mine">
+            </fieldset>
+          </form>
     </main>
 
     <footer class="footer_grid">
@@ -84,9 +102,7 @@
 
         <div class="footer_display_complete">
             <h5>Let's Get Creative Together</h5>
-            <br>
             <h5>Let's Get Creative Together</h5>
-            <br>
             <h5>Let's Get Creative Together</h5>
         </div>
         <div>
