--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Unlock your creative potential with our portfolio
+    of design, programming, and pottery services. Discover the perfect blend of artistry and
+    technology as we bring your ideas to life. From stunning visual designs to innovative programming
+    solutions, our team is dedicated to delivering captivating experiences. Explore our portfolio and unleash your
+    imagination today.">
+    <meta name="keywords" content="HTML, CSS, Design, Creativity, Pottery, Design Services">
     <title>My Creative World</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.png">
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" 
     rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" 
@@ -57,7 +64,6 @@
             <div class="text_box_a">
                     <h3>Check out my</h3>
                     <h2>Portfolio</h2>
-                    <br>
                     <p>Great work. Great artist.</p>
             </div>
         </main>
@@ -132,9 +138,7 @@
 
         <div class="footer_display_complete">
             <h5>Let's Get Creative Together</h5>
-            <br>
             <h5>Let's Get Creative Together</h5>
-            <br>
             <h5>Let's Get Creative Together</h5>
         </div>
         <div>
