--- a/pages/services.html
+++ b/pages/services.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Unlock your creative potential with our portfolio
+    of design, programming, and pottery services. Discover the perfect blend of artistry and
+    technology as we bring your ideas to life. From stunning visual designs to innovative programming
+    solutions, our team is dedicated to delivering captivating experiences. Explore our portfolio and unleash your
+    imagination today.">
+    <meta name="keywords" content="HTML, CSS, Design, Creativity, Pottery, Design Services">
     <title>My Creative World</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.png">
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" 
     rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" 
@@ -57,19 +64,15 @@
             <div class="text_box_c">
                     <h3>My</h3>
                     <h2>Services</h2>
-                    <br>
                     <p>What can i do for you?</p>
             </div>
             <div class="text_services">
                 <h5>Let's work together</h5>
-                <br>
                 <p>You don't need to choose right now. If you're unsure about how you want to work with me.</p>
-                <br>
                 <p><strong>Let's chat!</strong></p>
-                <br>
                 <p>We can always have a consultation meeting to learn about you're project.</p>
                 <div class="button_div">
-                    <a class="btn_mine" href="../pages/services.html">Let's do it!</a>
+                    <a class="btn_mine" href="../pages/contact.html">Let's do it!</a>
                 </div>
             </div>
             <div class="bg_services">
@@ -105,7 +108,7 @@
             <p class="design_services_text">Manage your brand identity and strategy to effectively communicate with
                 your target audience and build brand recognition and loyalty.</p>
             <div class="button_div_c">
-                <a class="design_services_button" href="../pages/services.html">I want this!</a>
+                <a class="design_services_button" href="../pages/contact.html">I want this!</a>
             </div>
         </div>
     </section>
@@ -113,14 +116,12 @@
     <section class="services_flex">
         <div class="services_items" >
             <h3>Web</h3>
-            <br>
             <p>Build your web with me! Design, strategy and coding all in one place! Let's get together
                 and discuss your business. We can work this out!</p>
             <p><strong>We can always have a consultation meeting to learn more about you're project.</strong></p>
         </div>
         <div class="services_items" >
             <h3>Pottery</h3>
-            <br>
             <p>Always have time to handmade! Pottery loooooove around here. Personalized pieces, colors
                  and design. Nothing is better than handmade!</p>
             <p><strong>We can always have a consultation meeting to learn more about you're project.</strong></p>
@@ -142,9 +143,7 @@
 
         <div class="footer_display_complete">
             <h5>Let's Get Creative Together</h5>
-            <br>
             <h5>Let's Get Creative Together</h5>
-            <br>
             <h5>Let's Get Creative Together</h5>
         </div>
         <div>
